# Pesquisa-De-Mercado-Tenis-Corrida-Masculino

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  db_auxiliar.db  extensao_postgresql.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci_cd_python.yml
app/: notebook.ipynb
app/uteis/: configuracao_loguru.py  configuracao_polars.py
app/webscraping/: middlewares.py  settings.py
app/webscraping/spiders/: mercadolivre.py  quotes_spider.py
app_webscraping/: quotes-2.html  scrapy.cfg
app_webscraping/app_webscraping/: items.py  pipelines.py  settings.py
app_webscraping/app_webscraping/spiders/: mercadolivre.py
assets/: cabecalho.css  error.html  index.html  loading.html  page_404.html  pagina.css  sidebar.css  styles.css  teste.json
assets/css/: style_carregamento.1.0.0.css  style_carregamento.css  style_error.css  style_page_404.css  styles.1.0.1.css  styles.1.0.2.css  styles.1.0.3.css  styles.1.0.4.css  styles.1.0.5.css  styles.css
assets/dash_js/: dash_change_title.js  dash_config.js  dash_renderer.js  plotly-basic-2.35.2.min.js
assets/js/: carregamento.1.0.0.js  clientside_callbacks.1.0.1.js  clientside_callbacks.js  loading.js  pre_render.js
config/: polars.json
dados/: duckdb_database.db
dados/marcas_unicas/: marcas_unicas.csv
dados/nao_processados/: mercado_livre.csv  mercado_livre.json  mercado_livre_1.csv  mercado_livre_14_08_2024.json  mercado_livre_15_08_2024.json  mercado_livre_2.csv  mercado_livre_2.json  mercado_livre_2024_08_12.json  mercado_livre_2024_08_14.json  mercado_livre_2024_08_15.json  mercado_livre_2024_08_19.json
dados/processados/: mercado_livre.parquet  mercado_livre_15_08_2024.parquet  mercado_livre_2024_08_14.parquet  mercado_livre_2024_08_19.parquet
dashboard/: index.html
dashboard/componentes/: index.html
dashboard/componentes/cabecalho/: index.html
dashboard/componentes/sidebar/: index.html
dashboard/configuracoes_dash/: index.html
dashboard/dashboard_app/: index.html
dashboard/paginas/: index.html
dashboard/paginas/pagina_404/: index.html
dashboard/paginas/pagina_faixa_preco/: index.html
dashboard/paginas/pagina_home/: index.html
dashboard/paginas/pagina_kpis/: index.html
dashboard/paginas/pagina_preco_medio/: index.html
dashboard/paginas/pagina_promocoes/: index.html
dashboard/paginas/pagina_satisfacao/: index.html
dashboard/paginas/pagina_top_10_marcas_atuais/: index.html
dashboard/paginas/pagina_top_10_marcas_periodo/: index.html
dashboard/processamento/: index.html
dashboard/processamento/escopo_global/: index.html
dashboard/processamento/gerenciador/: index.html
dashboard/processamento/inicializacao_dados/: index.html
dashboard/processamento/macros_sql/: index.html
dashboard/processamento/paginas/: index.html
dashboard/processamento/queries/: index.html
dashboard/processamento/tabelas_sql/: index.html
dashboard/script_docker/: index.html
dashboard/uteis/: index.html
dashboard/uteis/componentes_pagina/: index.html
dashboard/uteis/duckdb_local/: index.html
dashboard/uteis/formatacoes/: index.html
dashboard/uteis/traducoes/: index.html
dashboard/uteis/uteis_processamento/: index.html
docs/: index.md
docs/postgresql/: index.md  public.mercado_livre.md  public.tenis_corrida.md  public.view_mercado_livre.md  public.view_tenis_corrida.md  schema.json
etl/: index.html
etl/etl_app/: index.html
etl/etl_main/: index.html
modulos/: index.html
postgresql/: index.html  schema.json
postgresql/public.mercado_livre/: index.html
postgresql/public.tenis_corrida/: index.html
postgresql/public.view_mercado_livre/: index.html
postgresql/public.view_tenis_corrida/: index.html
resto/: index.html
search/: search_index.json
sql/: index.html
sql/ddl/: criar_tabela.sql
sql/dml/: inserir_dados.sql
sql/queries/: data_coleta_dados.sql  kpi_1_num_total_itens.sql  kpi_2_num_marcas_unicas.sql  kpi_3_preco_atual_medio.sql  marcas_mais_encontradas.sql  preco_medio_por_marca.sql  satisfacao_media_por_marca.sql  tratamento_mercado_livre.sql
sql/transformacao/: tratamento_dados.sql  tratamento_mercado_livre.sql
src/: app.py  dashboard_app.py  etl_app.py  etl_main.py  index.html  main.py  script_docker.sh  streamlit_app.py
src/dashboard/: __init__.py  cabecalho.py  configuracoes_dash.py  dash_dash.py  index.html  minha_sidebar.py  pagina_1.py  pagina_2.py  pagina_404.py  pagina_home.py  processamento_dados.py  streamlit_dash.py  traducoes.py
src/dashboard/componentes/: __init__.py  cabecalho.py  minha_sidebar.py
src/dashboard/configuracoes/: gunicorn_dev.py  gunicorn_prod.py
src/dashboard/paginas/: __init__.py  home.py  not_found_404.py  pagina_1.py  pagina_1_kpis.py  pagina_2.py  pagina_2_promocoes.py  pagina_2_top_10_marcas_atuais.py  (+18 more)
src/dashboard_app/: index.html
src/etl/: __init__.py  duckdb_local.py  etl_duckdb.py  extracao.py  extracao_sql.py  index.html  pipeline_mercado_livre.py  salvar.py  salvar_sql.py  transformacao.py  transformacao_duckdb.py  transformacao_sql.py  validar_dados.py
src/etl_app/: index.html
src/etl_main/: index.html
src/jupyter/: notebook.ipynb
src/modulos/: __init__.py  index.html
src/scrapy/: index.html
src/script_docker/: index.html
src/webscraping/: __init__.py  index.html  items.py  middlewares.py  pipelines.py  settings.py
testes/: index.html
tests/contrato_de_dados/: test_contrato_entrada.py  test_contrato_saida.py
webscraping/: index.html
webscraping/scrapy/: index.html
(+78 files in other folders)
