[tool.poetry]
name = "analise-de-dados"
version = "0.1.0"
description = ""
authors = ["Fenyx Forte <fenyx.studies@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dados.dependencies]
polars = {version = ">=1.4.0", extras = ["pyarrow"]}
pandera = {version = ">=0.20.3", extras = ["polars"]}
duckdb = ">=1.0.0"


[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6.0"
mkdocstrings = {version = ">=0.25.2", extras = ["python"]}
mkdocs-material = ">=9.5.30"


[tool.poetry.group.jupyter.dependencies]
ipykernel = "^6.29.5"


[tool.poetry.group.segredos.dependencies]
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.8.0"
ruff = ">=0.5.5"
bandit = ">=1.7.9"


[tool.poetry.group.testes.dependencies]
pytest = ">=8.3.2"


[tool.poetry.group.logging.dependencies]
loguru = ">=0.7.2"


[tool.poetry.group.webscraping.dependencies]
scrapy = "^2.11.2"
requests = "^2.32.3"
scrapeops-scrapy = "^0.5.6"


[tool.poetry.group.frontend.dependencies]
streamlit = "^1.37.1"
pandas = "^2.2.2"
dash = ">=2.17.1"
dash-bootstrap-components = "^1.6.0"



[tool.poetry.group.tasks.dependencies]
taskipy = "^1.13.0"

[tool.taskipy.tasks]
mercado_livre = "scrapy crawl mercadolivre"
mercado_livre_interativo = "scrapy shell 'https://lista.mercadolivre.com.br/tenis-corrida-masculino'"
run-streamlit = "streamlit run main.py --server.port=8501 --server.address=0.0.0.0"
run = "python etl_main.py"
test = "pytest"


[tool.ruff]
line-length = 80
target-version = "py312"
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py", "src/*.py", "tests/*.py"]

[tool.ruff.lint]
ignore = ["D203", "E111", "E203", "F401"]

[tool.bandit]
skips = ["B101", "B113", "B311"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
